<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Pig Game v2</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="player1">Player 1</string>
    <string name="player2">Player 2</string>
    <string name="two_pigs">Two pigs</string>
    <string name="score">Score</string>
    <string name="zero">0</string>
    <string name="points_for_this_turn">Points for this turn</string>
    <string name="Players_turn">Player one\'s turn</string>
    <string name="roll_die">Roll Die</string>
    <string name="end_turn">End Turn</string>
    <string name="new_game">New Game</string>
    <string name="instructions">
        Enter the names of the players above.
        Players roll one die as many times as they wish or until they roll a 1. 
        Their score for the turn is the sum of their rolls unless they get a 1, then it’s zero. 
        Players keep taking turns rolling until someone gets to 100. 
        If the player rolling first reaches 100, the second player may still take their turn. 
        The player with the highest score wins.
    </string>
    <string name="start_game">Start Game</string>

</resources>
